--- a/static/gallery/css/style.css
+++ b/static/gallery/css/style.css
@@ -30,6 +30,7 @@
 .header {
     height: 76px;
     background-color: #202020;
+    display: flex;
 }
 
 
@@ -37,8 +38,8 @@
   height: 49px;
   width: 650px;
   background-color: #373737;
-  margin: auto;
   color: #8B8B8B;
+  margin-left: 58vh;
   border-radius: 0px 0px 10px 10px;
 }
 
@@ -57,6 +58,36 @@
 .search input::placeholder {
   color: #8B8B8B;
 }
+
+.import {
+  margin-left: 80px;
+  text-align: center;
+  vertical-align: auto;
+  border-radius: 0px 0px 10px 10px;
+}
+
+.import button {
+  height: 50px;
+  width: 110px;
+  color: #8B8B8B;
+  font-size: 21px;
+  background-color: #373737;
+  margin: auto;
+  border-radius: 0px 0px 10px 10px;
+  text-decoration: none;
+  border: none;
+}
+
+.import button:hover {
+  text-decoration: none;
+}
+
+.import button:hover {
+  color: #fff;
+  font-weight: 500;
+  cursor: pointer;
+}
+
 
 .sidebar {
     height: 100%;
@@ -146,4 +177,91 @@
   margin: 3px;
   margin-bottom: 6px;
   border-radius: 5px;
+}
+
+
+
+
+
+
+
+
+/* POPUP UPLOAD NEW IMAGE */
+#import_file {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+
+#popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  display: none;
+}
+
+
+.profile-picture {
+  opacity: 0.75;
+  height: 350px;
+  width: 350px;
+  position: relative;
+  overflow: hidden;
+
+  /* default image */
+  background: url('https://qph.cf2.quoracdn.net/main-qimg-f32f85d21d59a5540948c3bfbce52e68');
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 0 8px 6px -6px black;
+}
+
+.file-uploader {
+  /* make it invisible */
+  opacity: 0;
+  /* make it take the full height and width of the parent container */
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+  /* make it absolute */
+  position: absolute;
+  top: 0%;
+  left: 0%;
+}
+
+
+.upload-icon {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* initial icon state */
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  color: #000;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #bbb;
+}
+
+
+/* toggle icon state */
+.profile-picture:hover .upload-icon {
+  opacity: 1;
+}
+
+.create_image {
+  color: #000;
+}
+
+.create_image input {
+  color: #000;
 }
